--- a/MJML/boardmember.html
+++ b/MJML/boardmember.html
@@ -197,7 +197,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Jay P,</p>
+                                    <p>Dear Ms. Lori Smith,</p>
                                     <p>I hope you and your family are healthy and well. </p>
                                     <p> I am a principal in a venture to consolidate the Dental industry. </p>
                                     <p> We are assembling a world-class Non-Ex Board of Directors, which will be augmented with excellent legal and accounting representation. </p>
@@ -209,6 +209,7 @@
                                     <p>If you agree, please use the following link to schedule a time for a quick chat as per your availability and I will send you a pdf with additional information about the venture. </p>
                                     <p>https://calendly.com/equitydental/mnap</p>
                                     <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit. </p>
+                                    <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e 90% discount on broken deals. </p>
                                     <p>Thank you for taking the time to read my message. </p>
                                   </div>
                                 </td>
