--- a/MJML/legal-rep.html
+++ b/MJML/legal-rep.html
@@ -197,7 +197,8 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Howard J. Young,</p>
+                                    <p>Dear Mr. Trey Andrews,</p>
+                                    <p>My apologies for clogging your inbox. We had a system issue.</p>
                                     <p>I hope you and your family are healthy and well. </p>
                                     <p> I am a principal in a venture to consolidate the Dental industry. </p>
                                     <p> We are currently interviewing law firms for our legal representation. </p>
