--- a/MJML/boardmember.html
+++ b/MJML/boardmember.html
@@ -199,7 +199,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Ara Babaian,</p>
+                                    <p>Dear Mr. Steve Higginbotham,</p>
                                     <p>I hope you and your family are healthy and well. </p>
                                     <p> I am a principal in a venture to consolidate the Dental industry. </p>
                                     <p> We are assembling a world-class Non-Ex Board of Directors, which will be augmented with excellent legal and accounting representation. </p>
@@ -212,7 +212,7 @@
                                     <p>https://calendly.com/equitydental/mnap</p>
                                     <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit. </p>
                                     <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e 90% discount on broken deals. </p>
-                                    <p>Current board members: https://eqdpi.com/cb1/ </p>
+                                    <p>Current board members: https://eqdpi.com/cb9/ </p>
                                     <p>Please note: The Big4 and top law firms allow their partners to join as non-executive board members. We already have those people. Why not ask, what do you have to lose? I'd love to hear from you. I'd love to hear from you. </p>
                                     <p>Thank you for taking the time to read my message. </p>
                                   </div>
