updated mjml and html pages

--- a/MJML/legal-rep.html
+++ b/MJML/legal-rep.html
@@ -199,7 +199,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Ms. Lynn Sessions,</p>
+                                    <p>Dear Mr. Geoffrey C. Cockrell,</p>
                                     <p>I hope you and your family are healthy and well. </p>
                                     <p> I am a principal in a venture to consolidate the Dental industry. </p>
                                     <p> We are currently interviewing law firms for our legal representation. </p>
@@ -307,7 +307,7 @@
                                     <tbody>
                                       <tr>
                                         <td style="width:600px;">
-                                          <img alt height="auto" src="https://www.equitydentalpartners.com/static/logo/header.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600">
+                                          <img alt height="auto" src="https://www.eqdpi.com/static/logo/header.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600">
                                         </td>
                                       </tr>
                                     </tbody>
