--- a/MJML/seller.html
+++ b/MJML/seller.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
-  <title> UGG Royale </title>
+  <title> Equity Dental Group </title>
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--<![endif]-->
@@ -42,12 +42,14 @@
     }
   </style>
   <!--[if mso]>
+        <noscript>
         <xml>
         <o:OfficeDocumentSettings>
           <o:AllowPNG/>
           <o:PixelsPerInch>96</o:PixelsPerInch>
         </o:OfficeDocumentSettings>
         </xml>
+        </noscript>
         <![endif]-->
   <!--[if lte mso 11]>
         <style type="text/css">
@@ -110,7 +112,7 @@
                   <tbody>
                     <tr>
                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
-                        <div style="font-family:'Open Sans', 'Raleway', Arial, Verdana, sans-serif;font-size:1px;line-height:1px;text-align:left;color:#ffffff;"><span class="preheader" style="visibility: hidden; mso-hide: all; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; width: 100%; display: none;"> Joint Venture/ Getting Acquired opportunity with Equity Dental Partners. Please explore more by visiting the links at the bottom. </span></div>
+                        <div style="font-family:'Open Sans', 'Raleway', Arial, Verdana, sans-serif;font-size:1px;line-height:1px;text-align:left;color:#ffffff;"><span class="preheader" style="visibility: hidden; mso-hide: all; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; width: 100%; display: none;"> PARTNERSHIP OPPORTUNITY </span></div>
                       </td>
                     </tr>
                   </tbody>
@@ -122,7 +124,7 @@
         </tbody>
       </table>
     </div>
-    <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" bgcolor="#f9f9f9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#f9f9f9;background-color:#f9f9f9;width:100%;">
         <tbody>
@@ -134,7 +136,7 @@
                   <tbody>
                     <tr>
                       <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                        <div style="font-family:Open Sans, Arial, sans-serif;font-size:14px;letter-spacing:2px;line-height:26px;text-align:center;text-transform:uppercase;color:#111111;">Joint Venture/ Getting Acquired opportunity</div>
+                        <div style="font-family:Open Sans, Arial, sans-serif;font-size:14px;letter-spacing:2px;line-height:26px;text-align:center;text-transform:uppercase;color:#111111;">Partnership Opportunity</div>
                       </td>
                     </tr>
                   </tbody>
@@ -146,7 +148,7 @@
         </tbody>
       </table>
     </div>
-    <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" bgcolor="#f9f9f9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#f9f9f9;background-color:#f9f9f9;width:100%;">
         <tbody>
@@ -168,7 +170,7 @@
                                     <tbody>
                                       <tr>
                                         <td style="width:100px;">
-                                          <img alt height="auto" src="https://www.equitydentalpartners.com/static/logo/l1-mail.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100">
+                                          <img alt height="auto" src="https://www.eqdpi.com/static/logo/l1-mail.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100">
                                         </td>
                                       </tr>
                                     </tbody>
@@ -196,9 +198,9 @@
                             <tbody>
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                  <div style="font-family:Raleway;font-size:13px;line-height:20px;text-align:left;color:#000000;">
-                                    <p>Dear Dr. Elahe Wissinger,</p>
-                                    <p>We are interested in acquiring your practice Embellir Med Spa located in Tucson, AZ. </p>
+                                  <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
+                                    <p>Dear Dr. Michael Radell,</p>
+                                    <p>We are interested in acquiring your practice Radell Michael H DDS located in 3900 Clark Rd, Sarasota, FL 34233. Or you can help us close more acquisitions. </p>
                                     <p> We are the buyers (not business brokers) with adequate capital and financing, and we’re prepared to close very quickly in the right situation. </p>
                                     <p> So, if you have no intention of retiring, that’s great! You could have the opportunity to become a big part of what promises to be an excited and rewarding future. </p>
                                     <p>You have our assurance that all matters will be held in the strictest confidence. </p>
@@ -216,19 +218,6 @@
                           </table>
                         </div>
                         <!--[if mso | IE]></td></tr></table><![endif]-->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <!--[if mso | IE]></td></tr></table></td></tr><![endif]--> &lt;!--[if !mso]&gt;&lt;\!--&gt;&lt;\!--&lt;![endif]--&gt;
-              <!--[if mso | IE]><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-              <div style="margin:0px auto;max-width:600px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
-                  <tbody>
-                    <tr>
-                      <td style="direction:ltr;font-size:0px;padding:10px 0 5px;text-align:center;">
-                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr></tr></table><![endif]-->
                       </td>
                     </tr>
                   </tbody>
@@ -266,6 +255,19 @@
                   </tbody>
                 </table>
               </div>
+              <!--[if mso | IE]></td></tr></table></td></tr><![endif]--> &lt;!--[if !mso]&gt;&lt;\!--&gt;&lt;\!--&lt;![endif]--&gt;
+              <!--[if mso | IE]><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+              <div style="margin:0px auto;max-width:600px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+                  <tbody>
+                    <tr>
+                      <td style="direction:ltr;font-size:0px;padding:10px 0 5px;text-align:center;">
+                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr></tr></table><![endif]-->
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
               <!--[if mso | IE]></td></tr></table></td></tr></table><![endif]-->
             </td>
           </tr>
@@ -284,13 +286,13 @@
         </tbody>
       </table>
     </div>
-    <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" bgcolor="#f9f9f9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#f9f9f9;background-color:#f9f9f9;width:100%;">
         <tbody>
           <tr>
             <td style="direction:ltr;font-size:0px;padding:40px 0 0;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" bgcolor="#f9f9f9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
               <div style="background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#f9f9f9;background-color:#f9f9f9;width:100%;">
                   <tbody>
@@ -306,7 +308,7 @@
                                     <tbody>
                                       <tr>
                                         <td style="width:600px;">
-                                          <img alt height="auto" src="https://www.equitydentalpartners.com/static/logo/header.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600">
+                                          <img alt height="auto" src="https://www.eqdpi.com/static/logo/header.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600">
                                         </td>
                                       </tr>
                                     </tbody>
@@ -358,19 +360,19 @@
                       <td align="center" style="font-size:0px;padding:0 10px;word-break:break-word;">
                         <div style="font-family:Open Sans, Arial, sans-serif;font-size:10px;line-height:14px;text-align:center;color:#111111;">
                           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;">
-                            <a href="http://www.ugg.com/" name="footer_ugghomepage" style="color:#111111; text-decoration:underline;">www.equitydentalpartners.com</a>
+                            <a href="http://www.eqdpi.com/" name="footer_equitys" style="color:#111111; text-decoration:underline;">www.eqdpi.com</a>
                           </p>
                           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;">
                             <span style="color:#111111 !important; text-decoration:none;">
                               <strong>1.714.606.7884</strong>
                               <br> 1002 N Sacramento St, Orange, CA 92867 </span>
                             <br>
-                            <a href="http://www.eqdpi.com/about" name="footer_privacy" style="color:#111111; text-decoration:underline;">
+                            <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
                               <strong>About Us</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partner" style="text-decoration:underline; color:#111111;">
+                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partner" style="color:#111111;">
                               <strong>Partnership</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partner" style="text-decoration:underline; color:#111111;">
-                              <strong>Other</strong>
+                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/solutions" style="color:#111111;">
+                              <strong>Solutions</strong>
                             </a>&nbsp;&nbsp;&nbsp;&nbsp;
                           </p>
                         </div>
