new seller page

--- a/MJML/seller.html
+++ b/MJML/seller.html
@@ -200,8 +200,8 @@
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
                                     <p>Dear Dr. Michael Radell,</p>
-                                    <p> We are very impressed with the quality of the practice that the doctor and team have built. </p>
-                                    <p>We believe that we have the ability to help the owner continue to grow the practice and create additional value for the owner, employees and patients through several initiatives.</p>
+                                    <p> We are very impressed with the quality of the practice that you and team have built. </p>
+                                    <p>We believe that we have the ability to help you to grow the practice and create additional value for you, employees and patients through several initiatives.</p>
                                     <p> We can create several different opportunities for you, so whether you plan on working for over 5 years, or planning for a exit within 3-5 years we can/will create much value for you. </p>
                                     <p>We are interested in acquiring your practice Radell Michael H DDS located in 3900 Clark Rd, Sarasota, FL 34233. Or you can help us close more acquisitions. </p>
                                     <p> We are the buyers (not business brokers) with adequate capital and financing, and we’re prepared to close very quickly in the right situation. </p>
