--- a/MJML/legal-rep.html
+++ b/MJML/legal-rep.html
@@ -203,7 +203,7 @@
                                     <p> I am a principal and leading a team in a venture to consolidate the Dental industry. </p>
                                     <p> In the beginning, we are focused on the midwestern region of the United States. </p>
                                     <p> I do not know if your current work would pose a conflict, but if not, I would welcome having a discussion. </p>
-                                    <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry at firmname is why I am reaching out. </p>
+                                    <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry at firmname is the reason I am reaching out. </p>
                                     <p> If you have an interest in learning more, I will forward a short summary, so you can make an informed decision. </p>
                                     <p> Thank you for taking the time to read my message. </p>
                                     <p>P.S Please feel free to forward my message to the appropriate person in your firm. </p>
@@ -365,7 +365,7 @@
                               <strong>Current Board</strong>
                             </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
                               <strong>About Us</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partner" style="color:#111111;">
+                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="https://eqdpi.com/partnershipform/" style="color:#111111;">
                               <strong>Partnership</strong>
                             </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/solutions" style="color:#111111;">
                               <strong>Solutions</strong>
