--- a/MJML/Bank-Chairman.html
+++ b/MJML/Bank-Chairman.html
@@ -199,7 +199,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Scot Lenoir,</p>
+                                    <p>Dear Mr. Craig Scheef,</p>
                                     <p>I hope you and your family are healthy and well. </p>
                                     <p> I am a principal in a venture to consolidate the Dental industry. </p>
                                     <p> We are assembling a world-class Non-Ex Board of Directors, which will be augmented with excellent legal and accounting representation. </p>
