--- a/MJML/legal-rep.html
+++ b/MJML/legal-rep.html
@@ -199,14 +199,13 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. _____ / Fill in FirmName,</p>
+                                    <p>Dear Mr. Frank Carsonie,</p>
                                     <p> I am a principal and leading a team in a venture to consolidate the Dental industry. </p>
                                     <p> In the beginning, we are focused on the midwestern region of the United States. </p>
                                     <p> I do not know if your current work would pose a conflict, but if not, I would welcome having a discussion. </p>
-                                    <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry at firmname is the reason I am reaching out. </p>
-                                    <p> If you have an interest in learning more, I will forward a short summary, so you can make an informed decision. </p>
+                                    <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry at Waller is the reason I am reaching out. </p>
+                                    <p> If you have an interest in learning more, I will forward a short Executive Summary, so you can make an informed decision. </p>
                                     <p> Thank you for taking the time to read my message. </p>
-                                    <p>P.S Please feel free to forward my message to the appropriate person in your firm. </p>
                                   </div>
                                 </td>
                               </tr>
@@ -359,11 +358,13 @@
                           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;">
                             <span style="color:#111111 !important; text-decoration:none;">
                               <strong>1.714.606.7884</strong>
-                              <br> 1002 N Sacramento St, Orange, CA 92867 </span>
+                              <!-- <br /> 1002 N Sacramento St, Orange, CA 92867 -->
+                            </span>
                             <br>
-                            <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
-                              <strong>Current Board</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
+                            <!-- <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
+              <strong>Current Board</strong>
+            </a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
+                            <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
                               <strong>About Us</strong>
                             </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="https://eqdpi.com/partnershipform/" style="color:#111111;">
                               <strong>Partnership</strong>
