--- a/MJML/seller-Young.html
+++ b/MJML/seller-Young.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
-  <title> Equity Dental Group </title>
+  <title> Equity Dental Partners </title>
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--<![endif]-->
@@ -112,7 +112,7 @@
                   <tbody>
                     <tr>
                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
-                        <div style="font-family:'Open Sans', 'Raleway', Arial, Verdana, sans-serif;font-size:1px;line-height:1px;text-align:left;color:#ffffff;"><span class="preheader" style="visibility: hidden; mso-hide: all; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; width: 100%; display: none;"> Non Executive Member Board of Director </span></div>
+                        <div style="font-family:'Open Sans', 'Raleway', Arial, Verdana, sans-serif;font-size:1px;line-height:1px;text-align:left;color:#ffffff;"><span class="preheader" style="visibility: hidden; mso-hide: all; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; width: 100%; display: none;"> PARTNERSHIP OPPORTUNITY </span></div>
                       </td>
                     </tr>
                   </tbody>
@@ -136,7 +136,7 @@
                   <tbody>
                     <tr>
                       <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                        <div style="font-family:Open Sans, Arial, sans-serif;font-size:14px;letter-spacing:2px;line-height:26px;text-align:center;text-transform:uppercase;color:#111111;">Non Executive Member Board of Directors</div>
+                        <div style="font-family:Open Sans, Arial, sans-serif;font-size:14px;letter-spacing:2px;line-height:26px;text-align:center;text-transform:uppercase;color:#111111;">Partnership Opportunity</div>
                       </td>
                     </tr>
                   </tbody>
@@ -170,7 +170,7 @@
                                     <tbody>
                                       <tr>
                                         <td style="width:100px;">
-                                          <img alt height="auto" src="https://eqdpi.com/static/logo/l1-mail.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100">
+                                          <img alt height="auto" src="https://www.eqdpi.com/static/logo/l1-mail.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100">
                                         </td>
                                       </tr>
                                     </tbody>
@@ -199,20 +199,21 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Timothy Matney,</p>
-                                    <p>I hope you and your family are healthy and well. </p>
-                                    <p> I am a principal in a venture to consolidate the Dental industry. </p>
-                                    <p> We are assembling a world-class Non-Ex Board of Directors, which are augmented with excellent legal and accounting representation. </p>
-                                    <p> Founding Board members will be given equity and will never be asked to contribute capital. </p>
-                                    <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle. </p>
-                                    <p>Time commitment: 1 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
-                                    <p>The intent is to guide the ship, not to actually row the boat. </p>
-                                    <p>It appears with your background, this might be a potential fit and worth discussing.</p>
-                                    <p>If you agree, please use the following link to schedule a time for a quick chat as per your availability and I will send you a pdf with additional information about the venture. </p>
-                                    <p>https://calendly.com/equitydental/mnap</p>
-                                    <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit. </p>
-                                    <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e 90% discount on broken deals. </p>
-                                    <p>Current board members: https://eqdpi.com/cb9/ </p>
+                                    <p>Dear Dr. Michael Radell,</p>
+                                    <p> We are very impressed with the quality of the practice that you and your team have built. </p>
+                                    <p> We believe that we can help you grow the practice and create additional value for you, employees, and patients through several initiatives. </p>
+                                    <p> We can create several different opportunities for you, so whether you plan to work for over five years or prepare for an exit within 3-5 years, we can/will create much value for you. </p>
+                                    <p>We are principals (not business brokers) with adequate capital and financing, and we’re prepared to close very quickly in the right situation. </p>
+                                    <p> If you have no intention of retiring, that’s great! You could have the opportunity to become a big part of what promises to be an excited and rewarding future. </p>
+                                    <p> You have our assurance that all matters will be held in the strictest confidence. </p>
+                                    <p>We also understand that any transaction must provide mutual benefits to be viable. </p>
+                                    <p>Here is more information about us: <a target="_blank" href="https://www.eqdpi.com/sellers">About Us</a> </p>
+                                    <p>
+                                    </p>
+                                    <p>I’d love to discuss your business over a phone call. </p>
+                                    <p>Please use the following Calendly link to schedule a time for us as per your availability. .</p>
+                                    <p>https://calendly.com/equity-dental/o </p>
+                                    <p>Please feel free to reach out to me anytime at 714-606-7884</p>
                                     <p>Thank you for taking the time to read my message. </p>
                                   </div>
                                 </td>
@@ -240,7 +241,8 @@
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:13px;line-height:8px;text-align:left;color:#000000;">
                                     <p>Best regards, </p>
-                                    <p>Jay Parteek | Principal | EquityDentalPartners</p>
+                                    <p>Jay Parteek </p>
+                                    <p>Principal </p>
                                     <p>Web: Eqdpi.com </p>
                                     <p>Linkedin: www.linkedin.com/in/jayeqd </p>
                                     <p>Email- Jay@eqdpi.com </p>
@@ -369,9 +371,7 @@
                               <strong>1.714.606.7884</strong>
                               <br> 1002 N Sacramento St, Orange, CA 92867 </span>
                             <br>
-                            <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
-                              <strong>Current Board</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
+                            <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
                               <strong>About Us</strong>
                             </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partner" style="color:#111111;">
                               <strong>Partnership</strong>
