--- a/MJML/boardmember.html
+++ b/MJML/boardmember.html
@@ -199,19 +199,19 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Timothy Matney,</p>
+                                    <p>Dear Mr. William Curtin,</p>
                                     <p>I hope you and your family are healthy and well. </p>
                                     <p> I am a principal in a venture to consolidate the Dental industry. </p>
                                     <p> We are assembling a world-class Non-Ex Board of Directors, which are augmented with excellent legal and accounting representation. </p>
                                     <p> Founding Board members will be given equity and will never be asked to contribute capital. </p>
                                     <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle. </p>
-                                    <p>Time commitment: 1 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
+                                    <p>Time commitment: 1-4 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
                                     <p>The intent is to guide the ship, not to actually row the boat. </p>
                                     <p>It appears with your background, this might be a potential fit and worth discussing.</p>
                                     <p>If you agree, please use the following link to schedule a time for a quick chat as per your availability and I will send you a pdf with additional information about the venture. </p>
                                     <p>https://calendly.com/equitydental/mnap</p>
                                     <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit. </p>
-                                    <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e 90% discount on broken deals. </p>
+                                    <p>PS. 2 national law firms proposed to work with us on a success fee basis i.e 90% discount on broken deals. </p>
                                     <p>Current board members: https://eqdpi.com/cb9/ </p>
                                     <p>Thank you for taking the time to read my message. </p>
                                   </div>
@@ -369,11 +369,11 @@
                               <strong>1.714.606.7884</strong>
                               <br> 1002 N Sacramento St, Orange, CA 92867 </span>
                             <br>
-                            <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
+                            <a href="https://eqdpi.com/cb9" name="footer_privacy" style="color:#111111;">
                               <strong>Current Board</strong>
                             </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
                               <strong>About Us</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partner" style="color:#111111;">
+                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partnership" style="color:#111111;">
                               <strong>Partnership</strong>
                             </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/solutions" style="color:#111111;">
                               <strong>Solutions</strong>
