--- a/MJML/legal-rep.html
+++ b/MJML/legal-rep.html
@@ -199,11 +199,11 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Frank Carsonie,</p>
+                                    <p>Dear Mr. David E. Dahlquist,</p>
                                     <p> I am a principal and leading a team in a venture to consolidate the Dental industry. </p>
                                     <p> In the beginning, we are focused on the midwestern region of the United States. </p>
                                     <p> I do not know if your current work would pose a conflict, but if not, I would welcome having a discussion. </p>
-                                    <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry at Waller is the reason I am reaching out. </p>
+                                    <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry is the reason I am reaching out. </p>
                                     <p> If you have an interest in learning more, I will forward a short Executive Summary, so you can make an informed decision. </p>
                                     <p> Thank you for taking the time to read my message. </p>
                                   </div>
