--- a/MJML/Bank-Chairman.html
+++ b/MJML/Bank-Chairman.html
@@ -199,7 +199,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Craig Scheef,</p>
+                                    <p>Dear Mr. Kevin Muskat,</p>
                                     <p>I hope you and your family are healthy and well. </p>
                                     <p> I am a principal in a venture to consolidate the Dental industry. </p>
                                     <p> We are assembling a world-class Non-Ex Board of Directors, which will be augmented with excellent legal and accounting representation. </p>
@@ -213,6 +213,7 @@
                                     <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit. </p>
                                     <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e 90% discount on broken deals. </p>
                                     <p>Current board members: https://eqdpi.com/acla/ </p>
+                                    <p>Collectively we have experience of doing over $300 Billion ( EV value) in M&A transactions. </p>
                                     <p>Thank you for taking the time to read my message. </p>
                                   </div>
                                 </td>
